# free-agent

./: .gitignore  .stylish-haskell.yaml  README.md  Setup.hs  TODO  _vimrc_local.vim  dashhs.cabal  free-agent.cabal  sources.txt  stack.yaml  thing.sh
.cabal/: lock
cli/: cabal.config  free-agent-cli.cabal
cli/src/FreeAgent/Cli/: CmdArgs.hs  Export.hs  Import.hs  Main.hs
cli/test/fixtures/: hello.yaml  schedule.yaml  world.yaml
core/: cabal.763  cabal.config  free-agent-core.cabal  sources.txt  stack.yaml
core/src/FreeAgent/: AgentPrelude.hs  Core.hs  Orphans.hs  Process.hs  Server.hs
core/src/FreeAgent/Core/: Action.hs  Agent.hs  Lenses.hs  Protocol.hs
core/src/FreeAgent/Core/Action/: Composition.hs  ShellCommand.hs
core/src/FreeAgent/Core/Internal/: Lenses.hs  Types.hs
core/src/FreeAgent/Core/Protocol/: Executive.hs  Peer.hs  Schedule.hs
core/src/FreeAgent/Core/Protocol/Executive/: History.hs
core/src/FreeAgent/Core/Server/: Executive.hs  Peer.hs  Schedule.hs
core/src/FreeAgent/Core/Server/Executive/: History.hs
core/src/FreeAgent/Database/: AcidState.hs
core/src/FreeAgent/Server/: Executive.hs  ManagedAgent.hs  Peer.hs  Schedule.hs
core/src/FreeAgent/Server/Executive/: History.hs
core/test/: FreeAgentSpec.hs
core/test/FreeAgent/: CoreSpec.hs  Fixtures.hs  TestHelper.hs
core/test/FreeAgent/Core/Action/: CompositionSpec.hs  ShellCommandSpec.hs
core/test/FreeAgent/Core/Server/: ExecutiveSpec.hs
core/test/FreeAgent/Server/: ExecutiveSpec.hs  PeerSpec.hs  ScheduleSpec.hs
example/: App.hs
examples/: cabal.config  example.cabal  free-agent-examples.cabal
examples/famon/: 10checks.yaml  800checks.yaml  Main.hs
examples/famon/FreeAgent/Plugins/: Nagios.hs
examples/nagios/: App.hs
free-agent-cli/: cabal.config  free-agent-cli.cabal
free-agent-cli/prog/: Main.hs
free-agent-cli/src/FreeAgent/Cli/: CmdArgs.hs  Export.hs  Import.hs  Main.hs
free-agent-cli/test/fixtures/: hello.yaml  schedule.yaml  world.yaml
free-agent-core/: Guardfile  cabal.config  free-agent-core.cabal  sources.txt
free-agent-core/src/: AgentPrelude.hs  FreeAgent.hs
free-agent-core/src/FreeAgent/: Action.hs  AgentPrelude.hs  Core.hs  Lenses.hs  Orphans.hs  Process.hs  Server.hs  Types.hs
free-agent-core/src/FreeAgent/Action/: Composition.hs  ShellCommand.hs
free-agent-core/src/FreeAgent/Client/: Peer.hs
free-agent-core/src/FreeAgent/Core/: Action.hs  Lenses.hs
free-agent-core/src/FreeAgent/Core/Action/: Composition.hs  ShellCommand.hs
free-agent-core/src/FreeAgent/Core/Internal/: Lenses.hs  Types.hs
free-agent-core/src/FreeAgent/Database/: AcidState.hs
free-agent-core/src/FreeAgent/Plugins/: Nagios.hs
free-agent-core/src/FreeAgent/Process/: ManagedAgent.hs
free-agent-core/src/FreeAgent/Server/: Executive.hs  ManagedAgent.hs  Peer.hs  Peer.hs-boot  Schedule.hs
free-agent-core/src/FreeAgent/Server/Executive/: History.hs
free-agent-core/test/: AppConfig.hs
free-agent-core/test/FreeAgent/: CoreSpec.hs  ExecutiveSpec.hs  Fixtures.hs  PeerSpec.hs  TestHelper.hs
free-agent-core/test/FreeAgent/Action/: CompositionSpec.hs  ShellCommandSpec.hs
free-agent-core/test/FreeAgent/Core/Action/: CompositionSpec.hs  ShellCommandSpec.hs
free-agent-core/test/FreeAgent/Server/: ExecutiveSpec.hs  PeerSpec.hs  ScheduleSpec.hs
leveldb-results/: free-agent-leveldb-results.cabal
proto/Dash/Plugins/Nagios/: Proto.proto
proto/Dash/Proto/: Common.proto  Runnable.proto
src/: AgentPrelude.hs  Dash.hs  FreeAgent.hs  Main.hs  main.hs
src/Control/Distributed/Process/: Lifted.hs
src/Control/Monad/Logger/: Quote.hs
src/Dash/: Action.hs  Action.hs-boot  Core.hs  Dash.hs  Lenses.hs  Plugins.hs  Prelude.hs  Proto.hs  Runnable.proto  Runner.hs  Store.hs  Types.hs
src/Dash/Plugins/: Common.hs  Nagios.hs
src/Dash/Runner/: NagCmd.hs
src/FreeAgent/: Action.hs  Core.hs  Database.hs  Executive.hs  Lenses.hs  Peer.hs  Peer.hs-boot  Prelude.hs  Process.hs  Server.hs  Types.hs
src/FreeAgent/Database/: KeySpace.hs
src/FreeAgent/Plugins/: Nagios.hs
src/FreeAgent/Process/: ManagedAgent.hs
src/FreeAgent/Server/: Executive.hs  Peer.hs
src/FreeAgent/Server/Executive/: History.hs
test/: AppConfig.hs  DashSpec.hs  FreeAgentSpec.hs
test/Dash/: ActionSpec.hs  CoreSpec.hs  DashSpec.hs  RunnerSpec.hs  StoreSpec.hs
test/Dash/Runner/: NagCmdSpec.hs
test/FreeAgent/: ActionSpec.hs  CoreSpec.hs  ExecutiveSpec.hs  PeerSpec.hs
