name:                dashhs
version:             0.1.0.0
author:              Jeremy Huffman
build-type:          Custom 
cabal-version:       >=1.8

-- -fno-warn-unused-imports is temp hack for protobuff-genned code
library 
  ghc-options:       -Wall -Werror -fno-warn-unused-imports
  hs-source-dirs:    proto, src, dist/build
  other-modules:     Dash.Prelude
  exposed-modules:   Dash
                   , Dash.Runner
                   , Dash.Store
                   , Dash.Proto
                   , Dash.Proto.Common
                   , Dash.Proto.Common.Wrapper
                   , Dash.Plugins.Nagios
                   , Dash.Plugins.Nagios.Proto
                   , Dash.Plugins.Nagios.Proto.Command
                   , Dash.Action
                   , Dash.Plugins

  build-depends:     base == 4.*
                   , process
                   , text
                   , text-format
                   , basic-prelude
                   , protocol-buffers
                   , protocol-buffers-descriptor
                   , utf8-string
                   , bytestring
                   , leveldb-haskell
                   , higher-leveldb == 0.1.0.42
                   , data-default
                   , resourcet
                   , transformers
                   , cryptohash
                   , MissingH
                   , mtl
                   , file-location
                   , binary
                   , lifted-base
                   , transformers-base
                   , lens

executable dashhs
  ghc-options:       -Wall -Werror -fno-warn-unused-imports -threaded -with-rtsopts=-N -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  main-is:           Main.hs
  hs-source-dirs:     src
  build-depends:     dashhs
                   , base == 4.*
                   , process
                   , text
                   , text-format
                   , basic-prelude
                   , protocol-buffers
                   , protocol-buffers-descriptor
                   , utf8-string
                   , bytestring
                   , higher-leveldb == 0.1.0.42
                   , leveldb-haskell
                   , data-default
                   , resourcet
                   , transformers
                   , cryptohash
                   , MissingH
                   , mtl
                   , file-location
                   , binary
                   , lifted-base
                   , transformers-base
                   , lens

test-suite spec
  ghc-options:       -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base == 4.*
                   , dashhs
                   , hspec >= 1.5
                   , basic-prelude
                   , protocol-buffers
                   , resourcet
                   , higher-leveldb == 0.1.0.42
                   , higher-leveldb
                   , process
                   , bytestring
                   , lens
