name:                dashhs
version:             0.1.0.0
author:              Jeremy Huffman
build-type:          Custom 
cabal-version:       >=1.8

-- -fno-warn-unused-imports is temp hack for protobuff-genned code
library 
  ghc-options:       -Wall -Werror
  hs-source-dirs:    src
  other-modules:     Dash.Prelude
  exposed-modules:   Dash
                   , Dash.Types
                   , Dash.Store
                   , Dash.Plugins
                   , Dash.Plugins.Nagios

  build-depends:     base == 4.*
                   , process
                   , text
                   , basic-prelude
                   , bytestring
                   , higher-leveldb == 0.2.0
                   , MissingH
                   , mtl
                   , file-location
                   , lifted-base
                   , lens
                   , cereal
                   , safecopy
                   , containers

executable dashhs
  ghc-options:       -Wall -Werror -threaded -with-rtsopts=-N -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  main-is:           Main.hs
  hs-source-dirs:     src
  build-depends:     dashhs
                   , base == 4.*
                   , process
                   , text
                   , basic-prelude
                   , bytestring
                   , higher-leveldb == 0.2.0
                   , MissingH
                   , mtl
                   , file-location
                   , lifted-base
                   , lens
                   , cereal
                   , safecopy
                   , containers

test-suite spec
  ghc-options:       -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base == 4.*
                   , dashhs
                   , hspec >= 1.5
                   , basic-prelude
                   , higher-leveldb == 0.2.0
                   , process
                   , bytestring
                   , lens
                   , cereal
                   , safecopy
                   , containers
                   , mtl
