name:                free-agent
version:             0.1.0.0
author:              Jeremy Huffman
build-type:          Custom 
cabal-version:       >=1.8

library 
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   FreeAgent 
                   , FreeAgent.Types
                   , FreeAgent.Lenses
                   , FreeAgent.Core
                   , FreeAgent.Action
                   , FreeAgent.Executive
                   , FreeAgent.Plugins.Nagios
                   , FreeAgent.Prelude
                   , Control.Distributed.Process.Lifted

  build-depends:     base == 4.*
                   , process
                   , text
                   , classy-prelude == 0.6.*
                   , bytestring
                   , higher-leveldb == 0.2.0
                   , MissingH
                   , mtl
                   , file-location
                   , lifted-base
                   , lens
                   , cereal
                   , safecopy
                   , containers >= 0.5.0.0
                   , data-default
                   , distributed-process
                   , distributed-process-platform
                   , network-transport-tcp
                   , network-transport
                   , resourcet
                   , transformers-base
                   , monad-control
                   , binary
                   , time
                   , template-haskell

executable example 
  ghc-options:       -Wall -threaded -with-rtsopts=-N -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  main-is:           App.hs
  hs-source-dirs:  example 
  build-depends:     free-agent
                   , base == 4.*

test-suite spec
  ghc-options:       -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     AppConfig
  build-depends:     base == 4.*
                   , free-agent
                   , hspec >= 1.5
                   , higher-leveldb == 0.2.0
                   , process
                   , bytestring
                   , lens
                   , cereal
                   , safecopy
                   , containers
                   , mtl
                   , distributed-process
                   , network-transport
                   , network-transport-tcp
                   , lifted-base
                   , text
                   , binary
