name:                free-agent
version:             0.1.0.0
author:              Jeremy Huffman
build-type:          Custom 
cabal-version:       >=1.10

library 
  ghc-options:       -Wall
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   AgentPrelude
                   , FreeAgent 
                   , FreeAgent.Database
                   , FreeAgent.Database.KeySpace
                   , FreeAgent.Database.AcidState
                   , FreeAgent.Types
                   , FreeAgent.Lenses
                   , FreeAgent.Process
                   , FreeAgent.Process.ManagedAgent
                   , FreeAgent.Core
                   , FreeAgent.Server
                   , FreeAgent.Server.Peer
                   , FreeAgent.Server.Executive
                   , FreeAgent.Action
                   , FreeAgent.Plugins.Nagios
                   , Control.Monad.Logger.Quote

  build-depends:     base == 4.*
                   , process
                   , text
                   , classy-prelude == 0.6.*
                   , bytestring
                   , higher-leveldb == 0.2.0
                   , MissingH
                   , mtl
                   , file-location
                   , lifted-base
                   , lens >= 3.10
                   , cereal
                   , safecopy
                   , containers >= 0.5.0.0
                   , data-default
                   , distributed-process
                   , distributed-process-platform
                   , distributed-process-p2p >= 0.1.2.2
                   , distributed-static
                   , network-transport-tcp
                   , network-transport
                   , resourcet
                   , transformers-base
                   , monad-control
                   , binary
                   , time
                   , old-locale
                   , template-haskell
                   , fast-logger == 2.*
                   , monad-logger
                   , deepseq
                   , deepseq-th 
                   , uuid
                   , shakespeare
                   , transformers
                   , errors 
                   , convertible
                   , acid-state
                   , filepath
                   , aeson
                   , scotty == 0.6.2
                   , cmdargs
                   , hslogger
executable example 
  ghc-options:       -Wall -threaded -with-rtsopts=-N -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  default-language:  Haskell2010
  main-is:           App.hs
  hs-source-dirs:  example 
  build-depends:     free-agent, base == 4.*

test-suite spec
  ghc-options:       -threaded -with-rtsopts=-N -optl-Wl,-rpath,/usr/local/lib,-enable-new-dtags
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     AppConfig
  build-depends:     base == 4.*
                   , free-agent
                   , hspec >= 1.5
                   , higher-leveldb == 0.2.0
                   , process
                   , bytestring
                   , lens
                   , cereal
                   , safecopy
                   , containers
                   , mtl
                   , distributed-process
                   , network-transport
                   , network-transport-tcp
                   , lifted-base
                   , text
                   , binary
