name: free-agent-core
version: 0.0.0.1
cabal-version: >=1.10
build-type: Custom
license: BSD3
maintainer: Jeremy Huffman
description:
    Distributed task management for application and systems automation,
    monitoring and management use cases.
category: System
author: Jeremy Huffman
 
library
    build-depends:
        base,
        template-haskell, 
        process >=1.1.0.2 && <1.2,
        text >=0.11.3.1 && <0.12,
        classy-prelude >=0.9.2 && <0.10,
        bytestring >=0.10.0.2 && <0.11,
        mtl >=2.1.2 && <2.2,
        file-location >=0.4.5.2 && <0.5,
        lifted-base >=0.2.3.0 && <0.3,
        lens >=4.3 && < 4.4,
        cereal >=0.4.0.1 && <0.5,
        safecopy >=0.8.3 && <0.9,
        containers >=0.5.0.0 && <0.6,
        data-default >=0.5.3 && <0.6,
        distributed-process >=0.5.0 && <0.6,
        distributed-process-monad-control >=0.5.0 && <0.6,
        distributed-process-platform >=0.1.0 && <0.2,
        distributed-process-p2p >=0.1.3.0 && <0.2,
        distributed-static >=0.3.0.0 && <0.4,
        network-transport-tcp >=0.4.0 && <0.5,
        network-transport >=0.4.0.0 && <0.5,
        transformers-base >=0.4.2 && <0.5,
        monad-control >=0.3.3.0 && <0.4,
        binary >=0.7.2.1 && <0.8,
        time >=1.4.0.1 && <1.5,
        old-locale >=1.0.0.5 && <1.1,
        fast-logger >=2.1.5 && <2.2,
        monad-logger >=0.3.7 && <0.4,
        deepseq >=1.3.0.1 && <1.4,
        deepseq-generics >=0.1.1.1 && <0.2,
        uuid >=1.3.3 && <1.4,
        shakespeare >=2.0.1.1 && <2.1,
        transformers >=0.3.0.0 && <0.4,
        errors >=1.4.7 && <1.5,
        convertible >=1.1.0.0 && <1.2,
        acid-state >=0.12.2 && <0.13,
        filepath >=1.3.0.1 && <1.4,
        aeson >=0.7.0.6 && <0.8,
        yaml >=0.8.8.4 && <0.9,
        cron >=0.2.1 && <0.3,
        attoparsec >=0.11.3.4 && <0.12,
        shelly >=1.5.4.1 && <1.6,
        regex-compat >=0.95.1 && <0.96,
        unordered-containers >=0.2.3.0 && <0.3,
        scientific >=0.3.3.0 && <0.4,
        base64-bytestring >=1.0.0.1 && <1.1
    exposed-modules:
        FreeAgent.Core
        FreeAgent.AgentPrelude
        FreeAgent.Database.AcidState
        FreeAgent.Core.Internal.Types
        FreeAgent.Orphans
        FreeAgent.Core.Lenses
        FreeAgent.Core.Internal.Lenses
        FreeAgent.Process
        FreeAgent.Client.Peer
        FreeAgent.Server
        FreeAgent.Server.ManagedAgent
        FreeAgent.Server.Peer
        FreeAgent.Server.Executive
        FreeAgent.Server.Executive.History
        FreeAgent.Server.Schedule
        FreeAgent.Core.Action
        FreeAgent.Core.Action.Composition
        FreeAgent.Core.Action.ShellCommand
        Control.Monad.Logger.Quote
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
 
test-suite spec
    build-depends:
        base >=4.6.0.1 && <4.7,
        free-agent-core -any,
        hspec >=1.11.0 && <1.12,
        process >=1.1.0.2 && <1.2,
        bytestring >=0.10.0.2 && <0.11,
        lens ==4.3.*,
        cereal >=0.4.0.1 && <0.5,
        safecopy >=0.8.3 && <0.9,
        containers >=0.5.0.0 && <0.6,
        mtl >=2.1.2 && <2.2,
        distributed-process >=0.5.0 && <0.6,
        distributed-process-platform >=0.1.0 && <0.2,
        network-transport >=0.4.0.0 && <0.5,
        network-transport-tcp >=0.4.0 && <0.5,
        lifted-base >=0.2.3.0 && <0.3,
        text >=0.11.3.1 && <0.12,
        binary >=0.7.2.1 && <0.8,
        aeson >=0.7.0.6 && <0.8,
        yaml >=0.8.8.4 && <0.9,
        time >=1.4.0.1 && <1.5
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        FreeAgent.TestHelper
    ghc-options: -threaded -with-rtsopts=-N
 
