name: free-agent-core
version: 0.0.0.1
cabal-version: >=1.10
build-type: Custom
license: BSD3
maintainer: Jeremy Huffman
description:
    Distributed task management for application and systems automation,
    monitoring and management use cases.
category: System
author: Jeremy Huffman
 
library
    build-depends:
        base,
        template-haskell,
        process >=1.1.0.2 && <1.3,
        text >=0.11.3.1 && <1.3,
        classy-prelude >=0.9.5 && <0.11,
        bytestring >=0.10.0.2 && <0.11,
        mtl >=2.1.2 && <2.3,
        file-location >=0.4.5.2 && <0.5,
        lifted-base >=0.2.3.0 && <0.3,
        lens ==4.6.*,
        cereal >=0.4.0.1 && <0.5,
        safecopy >=0.8.3 && <0.9,
        containers >=0.5.0.0 && <0.6,
        data-default >=0.5.3 && <0.6,
        distributed-process >=0.5.0 && <0.6,
        distributed-process-monad-control >=0.5.0 && <0.6,
        distributed-process-platform >=0.1.0 && <0.2,
        distributed-process-p2p >=0.1.3.0 && <0.2,
        distributed-static >=0.3.0.0 && <0.4,
        network-transport-tcp >=0.4.0 && <0.5,
        network-transport >=0.4.0.0 && <0.5,
        transformers-base >=0.4.2 && <0.5,
        monad-control >=0.3.3.0 && <0.4,
        binary >=0.7.2.1 && <0.8,
        time >=1.4.0.1 && <1.5,
        old-locale >=1.0.0.5 && <1.1,
        fast-logger >=2.1.5 && <2.3,
        monad-logger >=0.3.7 && <0.4,
        deepseq >=1.3.0.1 && <1.4,
        deepseq-generics >=0.1.1.1 && <0.2,
        uuid >=1.3.3 && <1.4,
        shakespeare >=2.0.1.1 && <2.1,
        transformers >=0.3.0.0 && <0.5,
        errors >=1.4.7 && <1.5,
        convertible >=1.1.0.0 && <1.2,
        acid-state >=0.12.2 && <0.13,
        filepath >=1.3.0.1 && <1.4,
        aeson >=0.7.0.6 && <0.9,
        yaml >=0.8.8.4 && <0.9,
        cron >=0.2.1 && <0.3,
        attoparsec >=0.11.3.4 && <0.13,
        shelly >=1.5.4.1 && <1.6,
        regex-compat >=0.95.1 && <0.96,
        unordered-containers >=0.2.3.0 && <0.3,
        scientific >=0.3.3.0 && <0.4,
        base64-bytestring >=1.0.0.1 && <1.1,
        data-clist >=0.0.7.2 && <0.1
    exposed-modules:
        FreeAgent.Core
        FreeAgent.AgentPrelude
        FreeAgent.Database.AcidState
        FreeAgent.Core.Internal.Types
        FreeAgent.Orphans
        FreeAgent.Core.Lenses
        FreeAgent.Core.Internal.Lenses
        FreeAgent.Process
        FreeAgent.Core.Protocol
        FreeAgent.Server
        FreeAgent.Server.ManagedAgent
        FreeAgent.Core.Protocol.Peer
        FreeAgent.Core.Server.Peer
        FreeAgent.Core.Protocol.Executive
        FreeAgent.Core.Server.Executive
        FreeAgent.Core.Protocol.Executive.History
        FreeAgent.Core.Server.Executive.History
        FreeAgent.Core.Protocol.Schedule
        FreeAgent.Core.Server.Schedule
        FreeAgent.Core.Action
        FreeAgent.Core.Action.Composition
        FreeAgent.Core.Action.ShellCommand
        Control.Monad.Logger.Quote
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-prof-options: -O2 -auto-all
    ghc-options: -Wall
 
test-suite spec
    build-depends:
        base,
        free-agent-core -any,
        hspec >=2.0.2 && <2.1,
        process >=1.1.0.2 && <1.3,
        bytestring >=0.10.0.2 && <0.11,
        lens >=4.3 && <4.7,
        cereal >=0.4.0.1 && <0.5,
        safecopy >=0.8.3 && <0.9,
        containers >=0.5.0.0 && <0.6,
        mtl >=2.1.2 && <2.3,
        distributed-process >=0.5.0 && <0.6,
        distributed-process-platform >=0.1.0 && <0.2,
        network-transport >=0.4.0.0 && <0.5,
        network-transport-tcp >=0.4.0 && <0.5,
        lifted-base >=0.2.3.0 && <0.3,
        text >=0.11.3.1 && <1.3,
        binary >=0.7.2.1 && <0.8,
        aeson >=0.7.0.6 && <0.9,
        yaml >=0.8.8.4 && <0.9,
        time >=1.4.0.1 && <1.5
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        FreeAgent.TestHelper
    ghc-options: -threaded -with-rtsopts=-N
 
