name:                free-agent-core
version:             0.1.0.0
author:              Jeremy Huffman
maintainer:          Jeremy Huffman
category:            System 
license:             BSD3
description:         Distributed task management for application and systems automation,
                     monitoring and management use cases.  
build-type:          Custom 
cabal-version:       >=1.10

library 
  ghc-options:       -Wall
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   AgentPrelude
                   , FreeAgent 
                   , FreeAgent.Database.AcidState
                   , FreeAgent.Types
                   , FreeAgent.Lenses
                   , FreeAgent.Process
                   , FreeAgent.Process.ManagedAgent
                   , FreeAgent.Core
                   , FreeAgent.Server
                   , FreeAgent.Server.Peer
                   , FreeAgent.Server.Executive
                   , FreeAgent.Server.Executive.History
                   , FreeAgent.Server.Schedule
                   , FreeAgent.Action
                   , FreeAgent.Plugins.Nagios
                   , Control.Monad.Logger.Quote

  build-depends:     base == 4.*
                   , process
                   , text
                   , classy-prelude == 0.6.*
                   , bytestring
                   , mtl
                   , file-location
                   , lifted-base
                   , lens >= 3.10
                   , cereal
                   , safecopy
                   , containers >= 0.5.0.0
                   , data-default
                   , distributed-process
                   , distributed-process-platform
                   , distributed-process-p2p >= 0.1.2.2
                   , distributed-static
                   , network-transport-tcp
                   , network-transport
                   , transformers-base
                   , monad-control
                   , binary
                   , time
                   , old-locale
                   , template-haskell
                   , fast-logger == 2.*
                   , monad-logger
                   , deepseq
                   , deepseq-th 
                   , uuid
                   , shakespeare
                   , transformers
                   , errors 
                   , convertible
                   , acid-state
                   , filepath
                   , aeson
                   , yaml
                   , cron
                   , attoparsec

test-suite spec
  ghc-options:       -threaded -with-rtsopts=-N
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     FreeAgent.TestHelper 
  build-depends:     base == 4.*
                   , free-agent-core
                   , hspec >= 1.5
                   , process
                   , bytestring
                   , lens
                   , cereal
                   , safecopy
                   , containers
                   , mtl
                   , distributed-process
                   , distributed-process-platform
                   , network-transport
                   , network-transport-tcp
                   , lifted-base
                   , text
                   , binary
                   , aeson
                   , yaml
